# tiny-ds

./: CMakeLists.txt  README.md
include/: .generic.h.swp  generic.h  queue.h  shuffle.h  stack.h
src/: .stack_demo.cpp.swp  queue_demo.cpp  shuffle_demo.cpp  stack_demo.cpp
